syntax = "proto3";

package authentication_service;

option go_package = "github.com/kiioong/are_they_playing/gen/go/internal/kiioong/authentication_service";


service Authentication {
  rpc Login (AuthenticationData) returns (AuthenticationStatus) {}
  rpc Logout (AuthenticationData) returns (AuthenticationStatus) {}
}

message AuthenticationData {
  string username = 1;
  string password = 2;
  int32 session_id = 3;
}

message AuthenticationStatus {
  bool is_logged_in = 1;
}
